<resources>
    <string name="app_name">finalLogin</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_else_you_can_sign_in_using_google">Or else you can sign in using below</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="facebook_app_id">271782710098561</string>
    <string name="fb_login_protocol_scheme">fb271782710098561</string>
</resources>
